Todo lo que llevo hasta ahora funciona

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -39,14 +39,12 @@
       <mat-menu #user="matMenu">
         <button mat-menu-item routerLink="/dashboard/registrar-usuario">Registrar usuario</button>
         <button mat-menu-item>Listar usuarios</button>
-        <button mat-menu-item>Añadir representante</button>
       </mat-menu>
       <mat-menu #finca="matMenu">
         <button mat-menu-item routerLink="/dashboard/crear-finca">Crear Finca</button>
-        <button mat-menu-item routerLink="/dashboard/crear-parcela">Añadir parcela</button>
         <button mat-menu-item routerLink="/dashboard/añadir-usuario">Añadir usuario a finca</button>
-        <button mat-menu-item>Listar parcelas</button>
-        <button mat-menu-item>Listar propietarios</button>
+        <button mat-menu-item routerLink="/dashboard/detalles-finca">Ver detalles finca</button>
+        <button mat-menu-item routerLink="/dashboard/crear-parcela">Añadir parcela</button>        
       </mat-menu>
       <mat-menu #movimientos="matMenu">
         <button mat-menu-item routerLink="/dashboard/crear-movimiento">Añadir movimiento</button>
