--- a/src/app/finca/añadir-usuario/add-usuario.component.scss
+++ b/src/app/finca/añadir-usuario/add-usuario.component.scss
@@ -2,7 +2,7 @@
     height: calc(100% - 32px); 
     padding: 20px;
     border-radius: 10px;
-    background-color: rgb(238, 238, 237);
+    background-color: #e8f5e9;
     overflow-y: auto;
     display: flex;
 }
@@ -21,8 +21,8 @@
 
 h2 {
     text-align: center;
-    color: black;
-    background-color: #0770fa;
+    color: white;
+    background-color: #00796b;
     border-radius: 10px;
     margin: unset;
     width: 100%;
@@ -31,7 +31,7 @@ h2 {
 .form-header{
     padding: 15px;
     margin-top: 10px;
-    border: 2px solid #0770fa;
+    border: 2px solid #00796b;
     border-radius: 10px;
     width: fit-content;
     height: fit-content;
