--- a/src/app/movimientos/crear-movimiento/crear-movimiento.component.html
+++ b/src/app/movimientos/crear-movimiento/crear-movimiento.component.html
@@ -1,4 +1,4 @@
-<h2>Crear Finca</h2>
+<h2>Añadir movimiento</h2>
 <form action="#" method="post" class="user-form">
     <div style="display: block; width: 100%;">
         <div class="flex">
@@ -24,10 +24,10 @@
                     </div>
                 </div>        
             </div>
-        </div>                       
-    </div>
-    <div class="div-buttons">
-        <button mat-raised-button class="create-button" (click)="guardar()">Guardar</button>
-        <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Cancelar</button>
-    </div>
+            <div class="div-buttons">
+                <button mat-raised-button class="create-button" (click)="guardar()">Guardar</button>
+                <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Cancelar</button>
+            </div>
+        </div>                              
+    </div>   
 </form>
