--- a/src/app/usuario/crear-usuario/crear-usuario.component.html
+++ b/src/app/usuario/crear-usuario/crear-usuario.component.html
@@ -15,10 +15,10 @@
                                 <label for="nombre{{ rowIndex * 3 + i }}">Nombre:</label>
                                 <input type="text" id="nombre{{ rowIndex * 3 + i }}" formControlName="nombre" name="nombre{{ rowIndex * 3 + i }}">
                 
-                                <label for="apellido1{{ rowIndex * 3 + i }}">Apellido 1:</label>
+                                <label for="apellido1{{ rowIndex * 3 + i }}">Primer apellido:</label>
                                 <input type="text" id="apellido1{{ rowIndex * 3 + i }}" formControlName="apellido1" name="apellido1{{ rowIndex * 3 + i }}">
 
-                                <label for="apellido2{{ rowIndex * 3 + i }}">Apellido 2:</label>
+                                <label for="apellido2{{ rowIndex * 3 + i }}">Segundo apellido:</label>
                                 <input type="text" id="apellido2{{ rowIndex * 3 + i }}" formControlName="apellido2" name="apellido2{{ rowIndex * 3 + i }}">
 
                                 <label for="email{{ rowIndex * 3 + i }}">Email:</label>
