--- a/src/app/movimientos/crear-movimiento/crear-movimiento.component.scss
+++ b/src/app/movimientos/crear-movimiento/crear-movimiento.component.scss
@@ -2,7 +2,7 @@
     height: calc(100% - 32px); 
     padding: 20px;
     border-radius: 10px;
-    background-color: rgb(238, 238, 237);
+    background-color: #e8f5e9;
     overflow-y: auto;
     display: flex;
 }
@@ -15,8 +15,8 @@
 
 h2 {
     text-align: center;
-    color: black;
-    background-color: #0770fa;
+    color: white;
+    background-color: #00796b;
     border-radius: 10px;
     margin: unset;
     width: 100%;
@@ -25,7 +25,7 @@ h2 {
 .form-header{
     padding: 15px;
     margin-top: 10px;
-    border: 2px solid #0770fa;
+    border: 2px solid #00796b;
     border-radius: 10px;
     width: fit-content;
     height: fit-content;
@@ -38,7 +38,7 @@ h1 {
     color: black;
     margin: unset;
     margin-top: -30px;
-    background-color: rgb(238, 238, 237);
+    background-color: #e8f5e9;
     width: fit-content;
     margin-bottom: 10px;
 }
@@ -104,8 +104,9 @@ h1 {
   .file-upload-label {
     display: block;
     padding: 10px 20px;
-    background-color: #b929e6;
-    color: white;
+    background-color: #00796b;
+    color: inherit;
+    color: white !important;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -115,8 +116,9 @@ h1 {
   }
   
   .file-upload-label:hover {
-    background-color: #b929e6;
+    background-color: #00796b;
     width: fit-content;
+    color: white;
   }
   
   .file-upload-input {
