--- a/src/app/parcela/crear-parcela/crear-parcela.component.scss
+++ b/src/app/parcela/crear-parcela/crear-parcela.component.scss
@@ -3,7 +3,7 @@
     overflow-y: auto;
     padding: 20px;
     border-radius: 10px;
-    background-color: rgb(238, 238, 237);
+    background-color: #e8f5e9;
     display: flex;
 }
 
@@ -22,7 +22,7 @@
 h2 {
     text-align: center;
     color: white;
-    background-color: #0770fa;
+    background-color: #00796b;
     border-radius: 10px;
     margin: unset;
     width: 100%;
@@ -37,7 +37,7 @@ h2 {
 .form-header{
     padding: 15px;
     margin-top: 10px;
-    border: 2px solid #0770fa;
+    border: 2px solid #00796b;
     border-radius: 10px;
     width: fit-content;
     height: fit-content;
@@ -50,7 +50,7 @@ h1 {
     color: black;
     margin: unset;
     margin-top: -30px;
-    background-color: rgb(238, 238, 237);
+    background-color: #e8f5e9;
     width: fit-content;
     margin-bottom: 10px;
 }
