--- a/src/app/usuario/detalles-usuario/detalles-usuario.component.html
+++ b/src/app/usuario/detalles-usuario/detalles-usuario.component.html
@@ -1,36 +1,110 @@
 <h2>Perfil</h2>
 <form action="#" method="post" class="user-form">   
     <div class="flex">
-        <div class="form-header">
-            <h1>Datos personales</h1>
-            <div class="form-group">
-                <div><span class="label" style="font-weight: bold;">Nombre:</span> <span class="label">{{ usuario?.nombre }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Primer Apellido:</span> <span class="label">{{ usuario?.apellido1 }}</span></div> 
-                <div><span class="label" style="font-weight: bold;">Segundo Apellido:</span> <span class="label">{{ usuario?.apellido2 }}</span></div>
-                <div><span class="label" style="font-weight: bold;">DNI:</span> <span class="label">{{ usuario?.dni }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Número de cuenta:</span> <span class="label">{{ usuario?.cuenta }}</span></div> 
-            </div>                              
-        </div>
-        <div class="form-header">
-            <h1>Dirección</h1>
-            <div class="form-group">                   
-                <div><span class="label" style="font-weight: bold;">Comunidad:</span> <span class="label">{{ usuario?.comunidad }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Provincia:</span> <span class="label">{{ usuario?.provincia }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Municipio:</span> <span class="label">{{ usuario?.municipio }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Dirección:</span> <span class="label">{{ usuario?.direccion }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Código postal:</span> <span class="label">{{ usuario?.codigoPostal }}</span></div>                   
+        <div style="flex-direction: column;">
+            <div class="flex">
+                <div class="form-header">
+                    <h1>Datos personales</h1>
+                    <div class="form-group">
+                        <div><span class="label" style="font-weight: bold;">Nombre:</span> <span class="label">{{ usuario?.nombre }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Primer Apellido:</span> <span class="label">{{ usuario?.apellido1 }}</span></div> 
+                        <div><span class="label" style="font-weight: bold;">Segundo Apellido:</span> <span class="label">{{ usuario?.apellido2 }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">DNI:</span> <span class="label">{{ usuario?.dni }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Número de cuenta:</span> <span class="label">{{ usuario?.cuenta }}</span></div> 
+                    </div>                              
+                </div>
+                <div class="form-header">
+                    <h1>Dirección</h1>
+                    <div class="form-group">                   
+                        <div><span class="label" style="font-weight: bold;">Comunidad:</span> <span class="label">{{ usuario?.comunidad }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Provincia:</span> <span class="label">{{ usuario?.provincia }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Municipio:</span> <span class="label">{{ usuario?.municipio }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Dirección:</span> <span class="label">{{ usuario?.direccion }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Código postal:</span> <span class="label">{{ usuario?.codigoPostal }}</span></div>                   
+                    </div>
+                </div>   
+                <div class="form-header">
+                    <h1>Usuario</h1> 
+                    <div class="form-group">                 
+                        <div><span class="label" style="font-weight: bold;">Email:</span> <span class="label">{{ usuario?.email }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Teléfono:</span> <span class="label">{{ usuario?.telefono }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Usuario:</span> <span class="label">{{ usuario?.username }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Fecha de alta:</span> <span class="label">{{ usuario?.fechaAlta | date:'dd/MM/yyyy' }}</span></div>
+                        <div style="display: flex;">
+                            <button mat-raised-button class="password-button" routerLink="/dashboard/editar-usuario/{{idUsuario}}">Cambiar contraseña</button>
+                            <button mat-raised-button class="repre-button" routerLink="/dashboard/añadir-representante/{{idUsuario}}">Añadir representante</button>
+                        </div>              
+                    </div>
+                </div>
+            </div> 
+            <div class="container" *ngIf="representantesAlta && representantesAlta.length > 0">
+                <h1>Representantes</h1>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Primer apellido</th>
+                            <th scope="col">Segundo apellido</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">DNI</th>
+                            <th scope="col">Teléfono</th>
+                            <th scope="col">Fecha de alta</th>
+                            <th scope="col">Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let representante of representantesAlta">
+                            <td>{{ representante.nombre }} </td>
+                            <td>{{ representante.apellido1 }} </td>
+                            <td>{{ representante.apellido2 }} </td>
+                            <td>{{ representante.email }} </td>
+                            <td>{{ representante.dni }} </td>
+                            <td>{{ representante.telefono }} </td>
+                            <td>{{ representante.fechaAlta | date:'dd/MM/yyyy'  }} </td>
+                            <td style="display: flex;">
+                                <button mat-button routerLink="/dashboard/editar-representante/{{representante.id}}" style="width: 100px; background-color: #00796b; color: white;">
+                                    <mat-icon>edit</mat-icon>
+                                    <span>Editar</span>
+                                </button>
+                                <button mat-button (click)="eliminarRepresentante(representante)" style="width: 100px; background-color: #00796b; color: white; margin-left: 20px">
+                                    <mat-icon>delete</mat-icon>
+                                    <span>Eliminar</span>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-        </div>   
-        <div class="form-header">
-            <h1>Usuario</h1> 
-            <div class="form-group">                 
-                <div><span class="label" style="font-weight: bold;">Email:</span> <span class="label">{{ usuario?.email }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Teléfono:</span> <span class="label">{{ usuario?.telefono }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Usuario:</span> <span class="label">{{ usuario?.username }}</span></div>
-                <div><span class="label" style="font-weight: bold;">Fecha de alta:</span> <span class="label">{{ usuario?.fechaAlta }}</span></div>
-                <div><button mat-raised-button class="password-button" routerLink="/dashboard/editar-usuario/{{idUsuario}}">Cambiar contraseña</button></div>              
-            </div>
-        </div>
+            <div class="container" *ngIf="representantesBaja && representantesBaja.length > 0">
+                <h1>Antiguos representantes</h1>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Primer apellido</th>
+                            <th scope="col">Segundo apellido</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">DNI</th>
+                            <th scope="col">Teléfono</th>
+                            <th scope="col">Fecha de alta</th>
+                            <th scope="col">Fecha de baja</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let representante of representantesBaja">
+                            <td>{{ representante.nombre }} </td>
+                            <td>{{ representante.apellido1 }} </td>
+                            <td>{{ representante.apellido2 }} </td>
+                            <td>{{ representante.email }} </td>
+                            <td>{{ representante.dni }} </td>
+                            <td>{{ representante.telefono }} </td>
+                            <td>{{ representante.fechaAlta | date:'dd/MM/yyyy'  }} </td>
+                            <td>{{ representante.fechaBaja | date:'dd/MM/yyyy'  }} </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>  
+        </div>                    
         <div class="div-buttons">
             <button mat-raised-button class="edit-button" routerLink="/dashboard/editar-perfil/{{idUsuario}}">Editar</button>
             <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Volver</button>
