--- a/src/app/usuario/detalles-usuario/detalles-usuario.component.scss
+++ b/src/app/usuario/detalles-usuario/detalles-usuario.component.scss
@@ -4,7 +4,7 @@
     overflow-y: auto;
     padding: 20px;
     border-radius: 10px;
-    background-color: rgb(238, 238, 237);
+    background-color: #e8f5e9;
   }
   
   .flex{
@@ -15,8 +15,8 @@
   
   h2 {
     text-align: center;
-    color: black;
-    background-color: #0770fa;
+    color: white;
+    background-color: #00796b;
     border-radius: 10px;
     margin: unset;
     width: 100%;
@@ -28,7 +28,7 @@
     justify-content: space-between;
     padding: 15px;
     margin-top: 10px;
-    border: 2px solid #0770fa;
+    border: 2px solid #00796b;
     border-radius: 10px;
     width: fit-content;
     height: fit-content;
@@ -41,7 +41,7 @@
     color: black;
     margin: unset;
     margin-top: -30px;
-    background-color: rgb(238, 238, 237);
+    background-color: #e8f5e9;
     width: fit-content;
     margin-bottom: 10px;
   }
@@ -102,10 +102,19 @@
 
   .password-button{
     width: 200px;
-    background-color: #0770fa;
+    background-color: #00796b;
     color: white;
     margin-top: 15px;
     margin-right: 10px;
+  }
+
+  .repre-button{
+    width: 200px;
+    background-color: #00796b;
+    color: white;
+    margin-top: 15px;
+    margin-right: 10px;
+    margin-left: 15px;
   }
   
   .cancel-button{
@@ -114,8 +123,54 @@
     color: black;
     margin-top: 15px;
   }
+
+  .container {
+    background-color: #e8f5e9;
+    border-radius: 8px;
+    margin-left: 20px;
+    margin-right: inherit;
+    --bs-gutter-x: 0;
+    margin-top: 50px;
+  }
   
-  @media only screen and (max-width: 1380px) {
+  /* Título de la tabla */
+h1 {
+  font-weight: bold;
+  color: black;
+}
+
+/* Estilo de la tabla */
+.table {
+  border-radius: 5px;
+  overflow: hidden;
+  width: fit-content;
+}
+
+/* Estilo para las celdas del encabezado de la tabla */
+.table thead th {
+  background-color: #00796b; /* Gris más oscuro */
+  color: white; /* Color de texto negro */
+  font-weight: bold;
+  font-size: 14px; /* Letras más pequeñas */
+  padding: 15px 20px;
+  margin-left: 10px;
+}
+
+/* Estilo para las celdas de los datos de la tabla */
+.table tbody td {
+  background-color: #e8f5e9; /* Fondo de las celdas más claro */
+  color: black; /* Color de texto negro */
+  font-size: 14px; /* Letras más pequeñas */
+  vertical-align: middle;
+  padding-left: 20px; /* Espacio específico desde el borde izquierdo */
+  text-align: left; /* Alinea el texto a la izquierda */
+  padding-right: 20px; /* Espacio específico desde el borde izquierdo */
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+  @media only screen and (max-width: 1530px) {
     .user-form{
       flex-direction: column;
       align-items: left;
@@ -159,7 +214,7 @@
     }
 
     .password-button{
-        background-color: #0770fa;
+        background-color: #00796b;
         color: white;
       }
     
