crear parcela por rf, falta terminar el actualizar solo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
             </select>
         </div>       
     </div>
-    <google-map style="border-radius: 10px;" height="493px" width="100%" [center]="mapCenter" [zoom]="18.2" [mapTypeId]="mapTypeSatellite" (mapClick)="onMapClick($event)">
+    <google-map height="87%" width="100%" [center]="mapCenter" [zoom]="18.2" [mapTypeId]="mapTypeSatellite" (mapClick)="onMapClick($event)">
         <map-marker [position]="mapCenter"></map-marker>
     </google-map>  
 </div>
