--- a/src/app/parcela/detalles-parcela/detalles-parcela.component.scss
+++ b/src/app/parcela/detalles-parcela/detalles-parcela.component.scss
@@ -1,4 +1,3 @@
-/* Contenedor principal del formulario */
 .user-form {
     position: relative;
     height: calc(100% - 32px); 
@@ -57,7 +56,7 @@ h2 {
     margin-right: 20px; 
     width: auto;
     height: auto;
-    display: flex;
+    //display: flex;
   }
 
 .edit-button{
@@ -75,18 +74,10 @@ h2 {
     margin-top: 15px;
 }
 
-.flex{
-    display: flex;
-    width: fit-content;
-    height: fit-content;
-  }
-
 /* Contenedor de la tabla */
 .container {
-    background-color: rgb(238, 238, 237);
-    //padding: 20px;
+    background-color: #e8f5e9;
     border-radius: 8px;
-    //margin-right: 20px;
     margin-left: 20px;
     margin-right: inherit;
     --bs-gutter-x: 0;
@@ -111,6 +102,8 @@ h1 {
     color: white; /* Color de texto negro */
     font-weight: bold;
     font-size: 14px; /* Letras más pequeñas */
+    padding: 15px 20px;
+    margin-left: 10px;
 }
 
 /* Estilo para las celdas de los datos de la tabla */
@@ -119,6 +112,9 @@ h1 {
     color: black; /* Color de texto negro */
     font-size: 14px; /* Letras más pequeñas */
     vertical-align: middle;
+    padding-left: 20px; /* Espacio específico desde el borde izquierdo */
+    text-align: left; /* Alinea el texto a la izquierda */
+    padding-right: 20px; /* Espacio específico desde el borde izquierdo */
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
@@ -131,7 +127,7 @@ h1 {
 }
 
 /* Media queries para pantallas pequeñas */
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1470px) {
     .user-form {
         align-items: flex-start;
     }
