Cambios hasta ahora, funciona todo, faltan liquidaciones, permisos de rol y listar usuarios y dar de baja cosas

--- a/src/app/finca/detalles-finca/detalles-finca.component.html
+++ b/src/app/finca/detalles-finca/detalles-finca.component.html
@@ -43,7 +43,13 @@
                 </table>
             </div>
             <div class="container" *ngIf="usuariosFincaInfo && usuariosFincaInfo.length > 0">
-                <h1>Usuarios</h1>
+                <h1>
+                    Usuarios
+                    <button mat-button routerLink="/dashboard/añadir-usuario" style="margin-left: 20px; width: 100px; background-color: #00796b; color: white;">
+                        <mat-icon>add</mat-icon>
+                        <span>Añadir</span>
+                    </button>
+                </h1>
                 <table class="table table-striped">
                     <thead>
                         <tr>
