--- a/src/app/usuario/editar-usuario/editar-usuario.component.html
+++ b/src/app/usuario/editar-usuario/editar-usuario.component.html
@@ -4,19 +4,19 @@
         <div class="form-header">
             <h1>Datos personales</h1>
             <div class="form-group">
-                <label for="nombre">Nombre:</label>
+                <span class="label" style="font-weight: bold;">Nombre:</span>
                 <input type="text" id="nombre" name="nombre" required [ngModel]="usuario?.nombre" (ngModelChange)="usuario && (usuario.nombre = $event)"><br> 
 
-                <label for="apellido1">Primer Apellido:</label>
+                <span class="label" style="font-weight: bold;">Primer Apellido:</span>
                 <input type="text" id="apellido1" name="apellido1" required [ngModel]="usuario?.apellido1" (ngModelChange)="usuario && (usuario.apellido1 = $event)"><br> 
 
-                <label for="apellido2">Segundo Apellido:</label>
+                <span class="label" style="font-weight: bold;">Segundo Apellido:</span>
                 <input type="text" id="apellido2" name="apellido2" required [ngModel]="usuario?.apellido2" (ngModelChange)="usuario && (usuario.apellido2 = $event)"><br> 
 
-                <label for="dni">DNI:</label>
+                <span class="label" style="font-weight: bold;">DNI:</span>
                 <input type="text" id="dni" name="dni" required [ngModel]="usuario?.dni" (ngModelChange)="usuario && (usuario.dni = $event)"><br> 
 
-                <label for="cuenta">Número de Cuenta:</label>
+                <span class="label" style="font-weight: bold;">Número de Cuenta:</span>
                 <input type="text" id="cuenta" name="cuenta" required [ngModel]="usuario?.cuenta" (ngModelChange)="usuario && (usuario.cuenta = $event)"><br> 
 
                 <div class="file-upload">
@@ -30,30 +30,30 @@
             <h1>Dirección</h1>
             <div class="form-group">                   
                 <div>
-                    <label for="comunidad">Comunidad:</label>
+                    <span class="label" style="font-weight: bold;">Comunidad:</span>
                     <select id="comunidad" name="comunidad" [(ngModel)]="selectedComunidad" (change)="onComunidadChange()" required>
                         <option value="" disabled selected>Seleccione una comunidad</option>
                         <option *ngFor="let comunidad of comunidades" [value]="comunidad.id">{{ comunidad.nombre }}</option>
                     </select>
 
-                    <label for="provincia">Provincia:</label>
+                    <span class="label" style="font-weight: bold;">Provincia:</span>
                     <span *ngIf="selectedProvincia === null" style="color: rgb(255, 94, 0); font-size: 0.8rem; margin-left: 10px;">(Seleccione una provincia)</span>
                     <select id="provincia" name="provincia" [(ngModel)]="selectedProvincia" (change)="onProvinciaChange()" required>
                         <option value="" disabled selected>Seleccione una provincia</option>
                         <option *ngFor="let provincia of provincias" [value]="provincia.id">{{ provincia.nombre }}</option>
                     </select>
 
-                    <label for="municipio">Municipio:</label>
+                    <span class="label" style="font-weight: bold;">Municipio:</span>
                     <span *ngIf="selectedProvincia === null" style="color: rgb(255, 94, 0); font-size: 0.8rem; margin-left: 10px;">(Seleccione una provincia)</span>
                     <select id="municipio" name="municipio" [(ngModel)]="selectedMunicipio" required>
                         <option value="" disabled selected>Seleccione un municipio</option>
                         <option *ngFor="let municipio of municipios" [value]="municipio.id">{{ municipio.nombre }}</option>
                     </select>               
                   
-                    <label for="direccion">Dirección:</label>
+                    <span class="label" style="font-weight: bold;">Dirección:</span>
                     <input type="text" iD="direccion" name="direccion" required [ngModel]="usuario?.direccion" (ngModelChange)="usuario && (usuario.direccion = $event)"><br>
         
-                    <label for="codigo_postal">Código postal:</label>
+                    <span class="label" style="font-weight: bold;">Código postal:</span>
                     <input type="text" id="codigo_postal" name="codigo_postal" required [ngModel]="usuario?.codigoPostal" (ngModelChange)="usuario && (usuario.codigoPostal = $event)"><br>
                 </div>       
             </div>
@@ -62,19 +62,19 @@
             <h1>Usuario</h1> 
             <div class="form-group">                  
                 <div>
-                    <label for="email">Email:</label>
+                    <span class="label" style="font-weight: bold;">Email:</span>
                     <input type="email" id="email" name="email" required [ngModel]="usuario?.email" (ngModelChange)="usuario && (usuario.email = $event)"><br>
                     
-                    <label for="telefono">Teléfono:</label>
+                    <span class="label" style="font-weight: bold;">Teléfono:</span>
                     <input type="text" id="telefono" name="telefono" required [ngModel]="usuario?.telefono" (ngModelChange)="usuario && (usuario.telefono = $event)"><br>
 
-                    <label for="usuario">Usuario:</label>
+                    <span class="label" style="font-weight: bold;">Usuario:</span>
                     <input type="text" id="usuario" name="usuario" required [ngModel]="usuario?.username" (ngModelChange)="usuario && (usuario.username = $event)"><br>
                 </div>      
             </div>
         </div>
         <div class="div-buttons">
-            <button mat-raised-button class="save-button" (click)="editar()">Guardar</button>
+            <button mat-raised-button class="save-button" type="submit">Guardar</button>
             <button mat-raised-button class="cancel-button" routerLink="/dashboard/ver-perfil/{{idUsuario}}">Cancelar</button>
         </div>
     </div>
