--- a/src/app/finca/añadir-usuario/add-usuario.component.scss
+++ b/src/app/finca/añadir-usuario/add-usuario.component.scss
@@ -44,7 +44,7 @@ h1 {
     color: black;
     margin: unset;
     margin-top: -30px;
-    background-color: rgb(238, 238, 237);
+    background-color: #e8f5e9;
     width: fit-content;
     margin-bottom: 10px;
 }
