--- a/src/app/parcela/crear-parcela/crear-parcela.component.html
+++ b/src/app/parcela/crear-parcela/crear-parcela.component.html
@@ -41,7 +41,7 @@
                     <input type="text" id="referenciaC" name="referenciaC" required><br>
 
                     <label for="uso-principal">Uso principal:</label>
-                    <select id="uso-principalC" name="usoPrincipalC">
+                    <select id="usoPrincipalC" name="usoPrincipalC">
                         <option value="Agrario">Agrario</option>
                     </select> 
 
@@ -64,8 +64,8 @@
                     <label for="fecha-reforma">Fecha reforma:</label>
                     <input type="date" id="fechaReformaC" name="fechaReformaC">
 
-                    <label for="superficie">Superficie:</label>
-                    <select id="superficie" name="superficieC"></select> 
+                    <label for="superficie">Superficie (m2):</label>
+                    <input type="number" id="superficieC" name="superficieC">
                 </div>      
             </div>
         </div>
