--- a/src/app/parcela/crear-usuario-parcela/crear-usuario-parcela.component.scss
+++ b/src/app/parcela/crear-usuario-parcela/crear-usuario-parcela.component.scss
@@ -1,27 +1,34 @@
 .user-form {
     height: calc(100% - 32px); 
-    overflow-y: auto;
     padding: 20px;
     border-radius: 10px;
     background-color: #e8f5e9;
-  }
-  
-  .flex{
+    overflow-y: auto;
     display: flex;
-    width: fit-content;
-    height: fit-content;
-  }
-  
-  h2 {
+}
+
+.propietarios{
+  display: flex;
+  width: fit-content;
+  margin-bottom: 20px;
+}
+
+.propietario {
+  margin: 0 10px;
+  width: fit-content;
+  box-sizing: border-box;
+}
+
+h2 {
     text-align: center;
     color: white;
     background-color: #00796b;
     border-radius: 10px;
     margin: unset;
     width: 100%;
-  }
-  
-  .form-header{
+}
+
+.form-header{
     padding: 15px;
     margin-top: 10px;
     border: 2px solid #00796b;
@@ -30,9 +37,9 @@
     height: fit-content;
     margin-bottom: 10px;
     margin-right: 70px;
-  }
-  
-  h1 {
+}
+
+h1 {
     font-weight: bold;
     color: black;
     margin: unset;
@@ -40,13 +47,13 @@
     background-color: #e8f5e9;
     width: fit-content;
     margin-bottom: 10px;
-  }
-  
-  .form-group {
+}
+
+.form-group {
     flex-direction: column;
-  }
-  
-  .label {
+}
+
+.label {
     flex-basis: 100%;
     font-size: 1rem;
     color: hsl(0, 0%, 20%);
@@ -56,80 +63,82 @@
     justify-content: space-between;
     margin-bottom: 10px;
 }
-  
-  .user-form label {
-    flex-basis: 100%;
-    font-weight: bold;
+
+.user-form label {
     font-size: 0.8rem;
     color: hsl(0, 0%, 20%);
     width: fit-content;
-  }
-  
-  .user-form input {
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-    margin-bottom: 10px;
-    width: 100%; 
-    justify-self: end;
-  }
-  
-  .user-form select {
+    margin-right: 20px;
+    margin-top: 5px;
+}
+
+.user-form input {
     padding: 8px;
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 0.8rem;
     margin-bottom: 10px;
     width: 100%; 
-    justify-self: end;
-    margin-bottom: 13px;
-  }
-  
-  .div-buttons{
-    width: fit-content
-    height fit-content;
+    margin-right: 20px;
+}
+
+.user-form select {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+    width: 100%; 
+}
+
+.div-buttons{
+    width: fit-content;
     display: flex;
-  }
-  
-  .save-button{
+    margin-top: 20px;
+    margin-left: auto;
+}
+
+.create-button{
     width: 100px;
     background-color: #2bea04;
     color: white;
-    margin-top: 15px;
-    margin-right: 10px;
-  }
+}
   
-  .cancel-button{
+.cancel-button{
     width: 100px;
     background-color: red;
     color: black;
-    margin-top: 15px;
-  }
-  
-  @media only screen and (max-width: 1543px) {
-    .user-form{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+@media only screen and (max-width: 1340px) {
+  .user-form{
       flex-direction: column;
       align-items: left;
     }
-  
-    .flex{
+
+    .propietarios{
       flex-direction: column;
       align-items: left;
       width: 100%;
     }
-  
+    
+    .propietario {
+      width: 100%;
+    }
+
     .form-header{
       width: 100%;
     }
-  
+
     .form-group {
       flex-direction: column;
       margin-right: 0;
       margin-left: 0;
       width: 100%;
     }
-  
+
     .user-form input {
       padding: 8px;
       border-radius: 5px;
@@ -138,13 +147,14 @@
       margin-bottom: 10px;
       width: 100%; 
     }
-  
+
     .div-buttons{
       width: fit-content;
       height: fit-content;
+      margin: inherit;
     }
-  
-    .save-button{
+
+    .create-button{
       background-color: #2bea04;
       color: white;
     }
@@ -152,5 +162,5 @@
     .cancel-button{
       background-color: red;
       color: black;
-    }  
-  }
+    }
+}
