--- a/src/app/parcela/detalles-parcela/detalles-parcela.component.html
+++ b/src/app/parcela/detalles-parcela/detalles-parcela.component.html
@@ -3,7 +3,13 @@
     <div class="flex">
         <div style="flex-direction: column;">
             <div class="container">
-                <h1>Propietarios</h1>
+                <h1>
+                    Propietarios
+                    <button mat-button routerLink="/dashboard/crear-usuario-parcela/{{referenciaCatastral}}" style="margin-left: 20px; width: 100px; background-color: #00796b; color: white;">
+                        <mat-icon>add</mat-icon>
+                        <span>Añadir</span>
+                    </button>
+                </h1>              
                 <table class="table table-striped">
                     <thead>
                         <tr>
@@ -22,10 +28,14 @@
                             <td>{{ usuario.participacion }}</td>
                             <td>{{ usuario.fechaAlta | date:'dd/MM/yyyy' }}</td>
                             <td>{{ usuario.fechaModificacion | date:'dd/MM/yyyy' }}</td>
-                            <td>
-                                <button mat-button>
-                                    <mat-icon>more_horiz</mat-icon>
-                                    <span>Ver opciones</span>
+                            <td style="display: flex;">
+                                <button mat-button routerLink="/dashboard/editar-usuario-parcela/{{usuario.id}}" style="width: 100px; background-color: #00796b; color: white;">
+                                    <mat-icon>edit</mat-icon>
+                                    <span>Editar</span>
+                                </button>
+                                <button mat-button (click)="eliminarUsuarioParcela(usuario)" style="width: 100px; background-color: #00796b; color: white; margin-left: 20px">
+                                    <mat-icon>delete</mat-icon>
+                                    <span>Eliminar</span>
                                 </button>
                             </td>
                         </tr>
@@ -47,7 +57,7 @@
                     <h1>Características</h1>                               
                     <div class="form-group">
                         <div><span class="label" style="font-weight: bold;">Tipo reforma:</span> <span class="label">{{ parcelaConstruccion?.tipoReforma }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Fecha reforma:</span> <span class="label">{{ parcelaConstruccion?.fechaReforma }}</span></div>
+                        <div><span class="label" style="font-weight: bold;">Fecha reforma:</span> <span class="label">{{ parcelaConstruccion?.fechaReforma | date:'dd/MM/yyyy' }}</span></div>
                         <div><span class="label" style="font-weight: bold;">Superficie:</span> <span class="label">{{ parcelaConstruccion?.superficie }} m2</span></div>
                         <div><span class="label" style="font-weight: bold;">Fecha de alta:</span> <span class="label">{{ parcelaConstruccion?.fechaAlta | date:'dd/MM/yyyy' }}</span></div>
                         <div *ngIf="parcelaConstruccion?.fechaModificacion"><span class="label" style="font-weight: bold;">Fecha de modificación:</span><span class="label">{{ parcelaConstruccion?.fechaModificacion | date:'dd/MM/yyyy' }}</span></div>
@@ -55,7 +65,7 @@
                     </div>      
                 </div>
             </div>
-            <div *ngIf="parcela?.referenciaCatastral" style="display: flex; width: fit-content; height: fit-content;">
+            <div *ngIf="parcela?.referenciaCatastral" class="flex">
                 <div class="form-header">
                     <h1>Datos</h1>
                     <div class="form-group">           
@@ -105,11 +115,11 @@
         </div>        
         <div class="div-buttons">
             <div style="display: flex;">
-                <button mat-raised-button class="edit-button" routerLink="/dashboard/editar-parcela">Editar</button>
-                <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Cancelar</button>
+                <button mat-raised-button class="edit-button" routerLink="/dashboard/editar-parcela/{{referenciaCatastral}}">Editar</button>
+                <button mat-raised-button class="cancel-button" routerLink="/dashboard/detalles-finca">Cancelar</button>
             </div>            
-            <button mat-button (click)="actualizarDatos()" style="width: 100px; background-color: #00796b; color: white; margin-top: 10px">
-                <mat-icon>delete</mat-icon>
+            <button mat-button *ngIf="parcela?.referenciaCatastral" (click)="actualizarDatos()" style="height: 50px; width: 210px;  background-color: #00796b; color: white; margin-top: 10px">
+                <mat-icon>refresh</mat-icon>
                 <span>Actualizar datos Catastro</span>
             </button>
         </div>
