--- a/src/app/parcela/editar-usuario-parcela/editar-usuario-parcela.component.scss
+++ b/src/app/parcela/editar-usuario-parcela/editar-usuario-parcela.component.scss
@@ -1,14 +1,15 @@
 .user-form {
     height: calc(100% - 32px); 
-    overflow-y: auto;
     padding: 20px;
     border-radius: 10px;
     background-color: #e8f5e9;
+    overflow-y: auto;
+    display: flex;
   }
   
   .flex{
     display: flex;
-    width: fit-content;
+    width: 100%;
     height: fit-content;
   }
   
@@ -26,7 +27,7 @@
     margin-top: 10px;
     border: 2px solid #00796b;
     border-radius: 10px;
-    width: fit-content;
+    width: 350px;
     height: fit-content;
     margin-bottom: 10px;
     margin-right: 70px;
@@ -45,13 +46,11 @@
   .form-group {
     flex-direction: column;
   }
-  
+
   .label {
-    flex-basis: 100%;
     font-size: 1rem;
     color: hsl(0, 0%, 20%);
     width: fit-content;
-    margin-right: 30px;
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
@@ -87,27 +86,27 @@
   }
   
   .div-buttons{
-    width: fit-content
-    height fit-content;
+    width: fit-content;
     display: flex;
+    margin-top: 20px;
+    margin-left: auto;
   }
   
   .save-button{
     width: 100px;
     background-color: #2bea04;
     color: white;
-    margin-top: 15px;
-    margin-right: 10px;
   }
   
   .cancel-button{
     width: 100px;
     background-color: red;
     color: black;
-    margin-top: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   
-  @media only screen and (max-width: 1543px) {
+  @media only screen and (max-width: 800px) {
     .user-form{
       flex-direction: column;
       align-items: left;
@@ -140,8 +139,10 @@
     }
   
     .div-buttons{
-      width: fit-content;
-      height: fit-content;
+        width: fit-content;
+        height: fit-content;
+        margin: inherit;
+        margin-top: 20px;
     }
   
     .save-button{
