--- a/src/app/usuario/detalles-usuario/detalles-usuario.component.scss
+++ b/src/app/usuario/detalles-usuario/detalles-usuario.component.scss
@@ -81,6 +81,14 @@
     justify-self: end;
     margin-bottom: 13px;
   }
+
+  .avatar{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    margin-left: 45px;
+  }
   
   .div-buttons{
     position: absolute;
@@ -184,6 +192,7 @@ h1 {
   
     .form-header{
       width: 100%;
+      display: flex;
     }
   
     .form-group {
@@ -201,6 +210,14 @@ h1 {
       margin-bottom: 10px;
       width: 100%; 
     }
+
+    .avatar{
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+      margin-left: inherit;
+    }
   
     .div-buttons{
       position: inherit;
@@ -216,6 +233,11 @@ h1 {
     .password-button{
         background-color: #00796b;
         color: white;
+        height: 45px;
+      }
+
+      .repre-button{
+        height: 45px;
       }
     
     .cancel-button{
